# UnSAM

./: pyproject.toml
src/divide_and_conquer/: cascadepsp.py  check.py  coco_annotator.py  demo_dico.py  dino.py  divide_conquer.py  generate_pseudo_masks.sh  iterative_merging.py
src/divide_and_conquer/.ipynb_checkpoints/: divide_conquer-checkpoint.py
src/divide_and_conquer/data/: __init__.py  build.py  dataset_mapper.py  detection_utils.py
src/divide_and_conquer/data/datasets/: __init__.py  builtin.py  builtin_meta.py  (+1 more)
src/divide_and_conquer/demo/: cascadepsp.py  check.py  coco_annotator.py
src/divide_and_conquer/engine/: __init__.py  defaults.py  train_loop.py
src/divide_and_conquer/modeling/: __init__.py
src/divide_and_conquer/solver/: __init__.py  build.py
src/divide_and_conquer/structures/: __init__.py
src/promptable_segmentation/: demo_auto_generation.py  demo_promptable.ipynb  demo_promptable.py  train_net.py
src/promptable_segmentation/datasets/: __init__.py  build.py
src/promptable_segmentation/model/: BaseModel.py  __init__.py  build_semantic_sam.py
src/promptable_segmentation/tasks/: __init__.py  automatic_mask_generator.py  interactive_idino_m2m.py  interactive_idino_m2m_auto.py  interactive_predictor.py
src/promptable_segmentation/utils/: arguments.py  constants.py  dist.py  distributed.py  misc.py  model.py  visualizer.py
src/whole_image_segmentation/: demo_whole_image.py  train_net.py
src/whole_image_segmentation/data/: __init__.py  build.py
src/whole_image_segmentation/mask2former/: __init__.py  config.py  maskformer_model.py
(+52 files in other folders)
