[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "UnSAM"
version = "0.0.1"
description = "Implementation of unsupervised segmentation with the Segment Anything model."
authors = ["XuDong Wang", "Jingfeng Yang", "Trevor Darrell"]
readme = "README.md"
packages = [
  { include = "divide_and_conquer", from = "src" }, 
  { include = "promptable_segmentation", from = "src"  }, 
  { include = "whole_image_segmentation", from = "src" },
]
package-mode = true


[tool.poetry.dependencies]
python = "^3.12"

arrow = "^1.3.0"
h5py = "^3.11.0"
imageio = "^2.35.1"
loguru = "^0.7.2"
msgspec = "^0.18.6"
numpy = "^2.0.0"
result = "^0.16.1"
tqdm = "^4.66.2"

opencv-python = "^4.10.0.84"
segmentation-refinement = "^0.6"
colored = "^2.2.4"
progressbar = "^2.5"
submitit = "^1.5.2"
timm = "^1.0.9"
pillow = "^10.4.0"
torch = "^2.4.1"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
black = {extras = ["jupyter"], version = "^24.4.2"}
jupyter = "^1.0.0"
ruff = "^0.4.9"


[tool.poetry.scripts]
